Implemented files upload on server and sync with db
Adjusted docuemntation

Migrated db
