# server/src/controllers/blog.ts
@@ -2,9 +2,9 @@ import 'reflect-metadata';
 
 import { Response } from 'express';
 import { File } from '@prisma/client';
+import { validationResult } from 'express-validator';
 import prisma from '../utils/db';
 import logger from '../utils/logger';
-import { validationResult } from 'express-validator';
 import { RequestProps, PaginationQuery } from '../types';
 
 type PostBody = {
@@ -12,11 +12,14 @@ type PostBody = {
   content: string;
 }
 
-export const getPosts = (_req: RequestProps<{}, PaginationQuery>, res: Response) => {
-  return res.status(200).send(res.locals.paginated);
+export const getPosts = (
+  _req: RequestProps<object, PaginationQuery>,
+  res: Response,
+) => {
+  res.status(200).send(res.locals.paginated);
 };
 
-export const addPost = async (req: RequestProps<PostBody, {}>, res: Response) => {
+export const addPost = async (req: RequestProps<PostBody, object>, res: Response) => {
   try {
     const { id: userId } = res.locals.payload;
     const { title, content } = req.body;
@@ -26,14 +29,16 @@ export const addPost = async (req: RequestProps<PostBody, {}>, res: Response) =>
       return res.status(400).send({ details: errors.array() });
     }
 
-    
-    let requestFiles = req.files as Express.Multer.File[] | undefined;
-    let files: Array<Pick<File, "filename"|"path"|"mimetype"|"size">> = [];
+    const requestFiles = req.files as Express.Multer.File[] | undefined;
+    let files: Array<Pick<File, 'filename'|'originalname'|'path'|'mimetype'|'size'>> = [];
     if (requestFiles) {
-      files = requestFiles.map(file => {
-        console.log(file);
-        const { filename, mimetype, size, path } = file;
-        return { filename, path, mimetype, size: BigInt(size) }
+      files = requestFiles.map((file) => {
+        const {
+          filename, originalname, path, mimetype, size,
+        } = file;
+        return {
+          filename, originalname, path, mimetype, size: BigInt(size),
+        };
       });
     }
 
@@ -45,27 +50,28 @@ export const addPost = async (req: RequestProps<PostBody, {}>, res: Response) =>
       data: {
         posts: { create: { title, content } },
       },
-      include: { posts: true }
+      include: { posts: true },
     });
 
     if (files.length) {
       // looking for the most recently created post
       const lastPost = insertData.posts.sort(
-        (a, b) => new Date(b.updatedAt).getTime() - new Date(a.updatedAt).getTime()
+        (a, b) => new Date(b.updatedAt).getTime() - new Date(a.updatedAt).getTime(),
       )[0];
       // adding files to this post
       await prisma.post.update({
-        where: { id: lastPost.id},
+        where: { id: lastPost.id },
         data: {
           files: {
             createMany: {
-              data: files
-            }
+              data: files,
+            },
           },
-        }
+        },
       });
     }
     // TODO: Raw SQL should be used instead for above operations
+    // otherwise it might lead to the data lost
 
     return res.status(200).send();
   } catch (e) {
@@ -74,7 +80,7 @@ export const addPost = async (req: RequestProps<PostBody, {}>, res: Response) =>
   }
 };
 
-export const patchPost = async (req: RequestProps<PostBody, {id: number}>, res: Response) => {
+export const patchPost = async (req: RequestProps<PostBody, {id?: number}>, res: Response) => {
   try {
     let { id: postId } = req.query;
     postId = Number(postId);
@@ -100,9 +106,10 @@ export const patchPost = async (req: RequestProps<PostBody, {id: number}>, res: 
   }
 };
 
-
-
-export const deletePost = async (req: RequestProps<{}, { id: number }>, res: Response) => {
+export const deletePost = async (
+  req: RequestProps<object, { id: number }>,
+  res: Response,
+) => {
   try {
     let { id: postId } = req.query;
     postId = Number(postId);
@@ -113,7 +120,7 @@ export const deletePost = async (req: RequestProps<{}, { id: number }>, res: Res
     }
 
     await prisma.post.delete({
-      where: { id: postId }
+      where: { id: postId },
     });
 
     return res.status(200).send();
